force-app/main/default/objects/nepa_process_team_member__c.object
<CustomObject>
    <description>CEQ Entity 8: User Role. Structured assignment of a Salesforce User to a NEPA IndividualApplication process with a defined role type, agency affiliation, and assignment window. Provides the role/agency/process traceability required by CEQ NEPA and Permitting Data and Technology Standard v1.2.</description>
    <fields>
        <fullName>nepa_process__c</fullName>
        <description>The NEPA process this team member is assigned to. CEQ Entity 8 process reference.</description>
        <inlineHelpText>The NEPA review process this person is assigned to.</inlineHelpText>
        <label>Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Process Team Members</relationshipLabel>
        <relationshipName>Process_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nepa_user__c</fullName>
        <description>The Salesforce User assigned to this process in this role. CEQ Entity 8 user_id reference.</description>
        <inlineHelpText>The staff member, contractor, or agency representative assigned to this process.</inlineHelpText>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Process Team Assignments</relationshipLabel>
        <relationshipName>Process_Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_agency__c</fullName>
        <description>The agency this user represents on this process. May differ from their primary org affiliation (e.g., a cooperating agency rep). CEQ Entity 8 agency reference.</description>
        <inlineHelpText>Agency this person represents on this process (e.g., cooperating agency, tribal government).</inlineHelpText>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Team Members</relationshipLabel>
        <relationshipName>Agency_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_role_type__c</fullName>
        <description>The functional role this person performs on the process. CEQ Entity 8 role_type property.</description>
        <inlineHelpText>Select the functional role for this team member on this process.</inlineHelpText>
        <label>Role Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Lead NEPA Coordinator</fullName><default>false</default><label>Lead NEPA Coordinator</label></value>
                <value><fullName>Cooperating Agency Rep</fullName><default>false</default><label>Cooperating Agency Rep</label></value>
                <value><fullName>Reviewer</fullName><default>false</default><label>Reviewer</label></value>
                <value><fullName>Preparer</fullName><default>false</default><label>Preparer</label></value>
                <value><fullName>Legal Reviewer</fullName><default>false</default><label>Legal Reviewer</label></value>
                <value><fullName>Tribal Liaison</fullName><default>false</default><label>Tribal Liaison</label></value>
                <value><fullName>GIS Specialist</fullName><default>false</default><label>GIS Specialist</label></value>
                <value><fullName>Field Team Member</fullName><default>false</default><label>Field Team Member</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_start_date__c</fullName>
        <description>Date this person's assignment on the process began. CEQ Entity 8 start_date property.</description>
        <inlineHelpText>Date this assignment began.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_end_date__c</fullName>
        <description>Date this person's assignment on the process ended. Null indicates currently active. CEQ Entity 8 end_date property.</description>
        <inlineHelpText>Date this assignment ended. Leave blank if currently active.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_active__c</fullName>
        <description>Convenience flag — true if this assignment is currently active. Set to false when the assignment ends rather than deleting the record for audit trail preservation.</description>
        <inlineHelpText>Check if this assignment is currently active.</inlineHelpText>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_notes__c</fullName>
        <description>Free-text notes about this team member's role or assignment context.</description>
        <inlineHelpText>Optional notes about this assignment.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_data_record_version__c</fullName>
        <description>CEQ standard v1.2 provenance: version identifier for this data record.</description>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_agency__c</fullName>
        <description>CEQ standard v1.2 provenance: agency that is the source of this data record.</description>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_system__c</fullName>
        <description>CEQ standard v1.2 provenance: system of record that originated this data.</description>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_record_owner_agency__c</fullName>
        <description>CEQ standard v1.2 provenance: agency responsible for maintaining this record.</description>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_retrieved_timestamp__c</fullName>
        <description>CEQ standard v1.2 provenance: timestamp when this record was retrieved from the source system.</description>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>NEPA Process Team Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEPA Process Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>