force-app/main/default/objects/nepa_process_team_member__c/fields/nepa_assembly_source__c.field-meta.xml
<CustomField>
    <fullName>nepa_assembly_source__c</fullName>
    <label>Assembly Source</label>
    <type>Text</type>
    <length>50</length>
    <description>Records how this team member was added to the process. GIS_Auto_Assembly: created by NEPA_Team_Assembly_Orchestrator when protection layers were detected. Manual: added by a coordinator directly. Stage_Gate: added by NEPA_Stage_Gate_Orchestrator at a process milestone. Used to distinguish auto-assembled members from manually added ones during idempotent re-assembly.</description>
    <inlineHelpText>How this team member was added: GIS_Auto_Assembly, Manual, or Stage_Gate.</inlineHelpText>
</CustomField>