force-app/main/default/objects/nepa_process_team_member__c/fields/nepa_discipline__c.field-meta.xml
<CustomField>
    <fullName>nepa_discipline__c</fullName>
    <label>Discipline</label>
    <type>Text</type>
    <length>100</length>
    <description>Specialist discipline copied from NEPA_Layer_Discipline__mdt.Discipline__c at team assembly time. Denormalized for reporting and filtering without traversing the CMT. Must match ServiceResource.nepa_discipline__c exactly. Set by NEPA_Team_Assembly_Orchestrator when nepa_assembly_source__c = GIS_Auto_Assembly.</description>
    <inlineHelpText>Specialist discipline for this team role (e.g., Hydrologist, Geologist). Set automatically by GIS team assembly.</inlineHelpText>
</CustomField>