force-app/main/default/objects/nepa_process_team_member__c/fields/nepa_service_resource__c.field-meta.xml
<CustomField>
    <fullName>nepa_service_resource__c</fullName>
    <label>Service Resource</label>
    <type>Lookup</type>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>NEPA Team Assignments</relationshipLabel>
    <relationshipName>NEPA_Team_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSL ServiceResource assigned to this NEPA process team role. Populated by NEPA_Team_Assembly_Orchestrator during GIS-driven auto-assembly. Null for manually added team members or assignments predating this field. Cleared (SetNull) if the ServiceResource record is deleted.</description>
    <inlineHelpText>The FSL Service Resource (specialist) assigned to this team role. Auto-populated when the team is assembled from GIS protection layer detection.</inlineHelpText>
</CustomField>